--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -4,7 +4,7 @@
 
 body {
     font-family: 'Montserrat', sans-serif;
-    background-color: #E5E5E5;
+    background-color: #cecece;
     padding: 40px;
 }
 
